--- a/cukesatdd/src/main/resources/config/ci/config.properties
+++ b/cukesatdd/src/main/resources/config/ci/config.properties
@@ -12,11 +12,11 @@ ldapBindPassword=password6
 ldapUrl=ldap://ldps8003:55395/
 ldapSuperUser=ocp_superuser
 ldapSuperUserPassword=password1
-isTestHarness=YES
+#isTestHarness=YES
 #isHSIDCompatible=null
 isHSIDCompatible=YES
 
-Environment=stage
+Environment=prod
 Domain=uhc.com
 
 
