--- a/cukesatdd/pom.xml
+++ b/cukesatdd/pom.xml
@@ -188,6 +188,18 @@
     </reporting>
 
     <dependencies>
+		<!-- xerces dependencies -->
+		<dependency>
+			<groupId>xerces</groupId>
+			<artifactId>xerces</artifactId>
+			<version>2.4.0</version>
+		</dependency>
+		<dependency>
+			<groupId>xerces</groupId>
+			<artifactId>xercesImpl</artifactId>
+			<version>2.11.0</version>
+		</dependency>
+
 		<!-- for jaxb dependencies -->
 		<dependency>
 			<groupId>javax.annotation</groupId>
