--- a/cukesatdd/src/main/resources/config/ci/config.properties
+++ b/cukesatdd/src/main/resources/config/ci/config.properties
@@ -30,7 +30,7 @@ BrowserName=Chrome
 
 #RealDevice setup
 #MOBILE_DEVICE_TYPE=Real
-#SaucelabsDeviceName=SAMSUNG GALAXY S8
+#SaucelabsDeviceName=SAMSUNG GALAXY S9
 #SaucelabsDeviceOSName=Android
 #SaucelabsDeviceOSVersion=8
 
@@ -46,7 +46,7 @@ SaucelabsDeviceOSVersion=9.0
 SaucelabsDeviceOSName=Android
 APPIUM_VERSION=1.9.1
 
-SaucelabsTestObjectAPIKey=B4242E614F4F47A094EC92A0606BBAC8
+#SaucelabsTestObjectAPIKey=B4242E614F4F47A094EC92A0606BBAC8
 #SaucelabsDeviceName=iPhone X
 #SaucelabsDeviceOSName=IOS
 #SaucelabsDeviceOSVersion=13
