--- a/cukesatdd/pom.xml
+++ b/cukesatdd/pom.xml
@@ -32,7 +32,10 @@
 				<artifactId>maven-compiler-plugin</artifactId>
 				<version>3.8.0</version>
 				<configuration>
-					<release>11</release>
+					<source>11</source>
+					<target>11</target>
+					<debug>true</debug>
+					<debuglevel>lines,vars,source</debuglevel>
 				</configuration>
 			</plugin>
 
