--- a/cukesatdd/src/main/resources/config/ci/config.properties
+++ b/cukesatdd/src/main/resources/config/ci/config.properties
@@ -16,7 +16,7 @@ ldapSuperUserPassword=password1
 #isHSIDCompatible=null
 isHSIDCompatible=YES
 
-Environment=stage
+Environment=prod
 Domain=uhc.com
 
 
