--- a/cukesatdd/src/main/resources/config/ci/config.properties
+++ b/cukesatdd/src/main/resources/config/ci/config.properties
@@ -14,7 +14,7 @@ ldapSuperUser=ocp_superuser
 ldapSuperUserPassword=password1
 #isTestHarness=YES
 #isHSIDCompatible=null
-isHSIDCompatible=YES
+isHSIDCompatible=null
 
 Environment=prod
 Domain=uhc.com
