--- a/cukesatdd/src/main/resources/config/ci/config.properties
+++ b/cukesatdd/src/main/resources/config/ci/config.properties
@@ -21,9 +21,9 @@ Domain=uhc.com
 isHSIDCompatible=YES
 HeadlessBrowserPath=C:/softwares/phantomjs-2.1.1-windows/phantomjs-2.1.1-windows/bin/phantomjs.exe
 DeviceName=Google Nexus 5
-WebDriver=saucelabs
-BrowserName=Chrome
-#ChromeDriver=C:\ProgramData\Chrome_driver_79.0.3945.16\chromedriver.exe
+WebDriver=Saucelabs
+BrowserName=chrome
+#ChromeDriver=C:\ProgramData\Chrome_driver_80.0.3987.16\chromedriver.exe
 
 #Mobile ATDD Inputs
 SaucelabsTestObjectAPIKey=MVPB4242E614F4F47A094EC92A0606BBAC8
