--- a/cukesatdd/src/main/resources/config/ci/config.properties
+++ b/cukesatdd/src/main/resources/config/ci/config.properties
@@ -12,10 +12,10 @@ ldapBindPassword=password6
 ldapUrl=ldap://ldps8003:55395/
 ldapSuperUser=ocp_superuser
 ldapSuperUserPassword=password1
-Environment=team-voc
+Environment=stage
 #isTestHarness=null
 isTestHarness=YES
-Domain=ocp-elr-core-nonprod.optum.com
+Domain=uhc.com
 #Domain=ocp-ctc-dmz-nonprod.optum.com
 #isHSIDCompatible=null
 isHSIDCompatible=YES
