Prod runners and fixes

--- a/cukesatdd/src/main/resources/config/ci/config.properties
+++ b/cukesatdd/src/main/resources/config/ci/config.properties
@@ -57,4 +57,5 @@ APPIUM_VERSION=1.9.1
 #SaucelabsDeviceName=iPhone 8
 #SaucelabsDeviceOSName=IOS
 #SaucelabsDeviceOSVersion=12
+#APPIUM_VERSION=1.9.1
 
