--- a/cukesatdd/src/main/resources/config/ci/config.properties
+++ b/cukesatdd/src/main/resources/config/ci/config.properties
@@ -13,11 +13,11 @@ ldapUrl=ldap://ldps8003:55395/
 ldapSuperUser=ocp_superuser
 ldapSuperUserPassword=password1
 Environment=stage
-Environment=team-voc
+#Environment=team-voc
 #isTestHarness=null
 isTestHarness=YES
 Domain=uhc.com
-Domain=ocp-elr-core-nonprod.optum.com
+#Domain=ocp-elr-core-nonprod.optum.com
 #Domain=ocp-ctc-dmz-nonprod.optum.com
 #isHSIDCompatible=null
 isHSIDCompatible=YES
