Provider search UAT fixes

--- a/cukesatdd/src/main/resources/config/ci/config.properties
+++ b/cukesatdd/src/main/resources/config/ci/config.properties
@@ -23,7 +23,7 @@ Domain=uhc.com
 HeadlessBrowserPath=C:/softwares/phantomjs-2.1.1-windows/phantomjs-2.1.1-windows/bin/phantomjs.exe
 #DeviceName=Google Nexus 5
 WebDriver=saucelabs
-BrowserName=Chrome
+BrowserName=Safari
 #BrowserVersion=
 #ChromeDriver=C:\ProgramData\Chrome_driver_79.0.3945.16\chromedriver.exe
 
@@ -54,7 +54,14 @@ sauceLabsMobileTunnelIdentifier=Optum-Stage
 
 
 #SauceLabsMobileTunnelIdentifier=OptumRDC_Manual_Stage
+#MOBILE_DEVICE_TYPE=Real
 #SaucelabsDeviceName=iPhone 8
 #SaucelabsDeviceOSName=IOS
 #SaucelabsDeviceOSVersion=12
 #APPIUM_VERSION=1.9.1
+
+#MOBILE_DEVICE_TYPE=Virtual
+#SaucelabsDeviceName=iPhone 11 Simulator
+#SaucelabsDeviceOSName=IOS
+#SaucelabsDeviceOSVersion=13.4
+#APPIUM_VERSION=1.17.1
