--- a/cukesatdd/src/main/resources/config/ci/config.properties
+++ b/cukesatdd/src/main/resources/config/ci/config.properties
@@ -23,7 +23,7 @@ Domain=uhc.com
 HeadlessBrowserPath=C:/softwares/phantomjs-2.1.1-windows/phantomjs-2.1.1-windows/bin/phantomjs.exe
 #DeviceName=Google Nexus 5
 WebDriver=saucelabs
-BrowserName=Safari
+BrowserName=Chrome
 #BrowserVersion=
 #ChromeDriver=C:\ProgramData\Chrome_driver_79.0.3945.16\chromedriver.exe
 
