--- a/cukesatdd/src/main/resources/config/ci/config.properties
+++ b/cukesatdd/src/main/resources/config/ci/config.properties
@@ -39,12 +39,15 @@ BrowserName=Chrome
 #SaucelabsDeviceOSName=Android
 #SaucelabsDeviceOSVersion=8
 
-#Virtual Device Setup
+#Virtual Device Setup  //
 MOBILE_DEVICE_TYPE=Virtual
-SaucelabsDeviceName=Samsung Galaxy S9 HD GoogleAPI Emulator
+SaucelabsDeviceName= Samsung Galaxy S9 HD GoogleAPI Emulator
 SaucelabsDeviceOSVersion=9.0
 SaucelabsDeviceOSName=Android
 APPIUM_VERSION=1.9.1
+
+#Samsung Galaxy Tab S3 GoogleAPI Emulator -7.1
+#Samsung Galaxy Tab A 10 GoogleAPI Emulator
 
 #SaucelabsTestObjectAPIKey=B4242E614F4F47A094EC92A0606BBAC8
 #SaucelabsDeviceName=iPhone X
