--- a/cukesatdd/src/main/resources/config/ci/config.properties
+++ b/cukesatdd/src/main/resources/config/ci/config.properties
@@ -27,10 +27,10 @@ BrowserName=Chrome
 #ChromeDriver=C:\ProgramData\Chrome_driver_79.0.3945.16\chromedriver.exe
 
 #Mobile ATDD Inputs
-SaucelabsTestObjectAPIKey=MVPB4242E614F4F47A094EC92A0606BBAC8
-SaucelabsDeviceName=Samsung Galaxy S9
+#SaucelabsTestObjectAPIKey=MVPB4242E614F4F47A094EC92A0606BBAC8
+SaucelabsDeviceName=Samsung Galaxy S10
 SaucelabsDeviceOSName=Android
-SaucelabsDeviceOSVersion=8
+SaucelabsDeviceOSVersion=9
 #SaucelabsDeviceName=iPhone X
 #SaucelabsDeviceOSName=IOS
 #SaucelabsDeviceOSVersion=13
