DCE-VPPCompare fix

--- a/cukesatdd/src/main/resources/config/ci/config.properties
+++ b/cukesatdd/src/main/resources/config/ci/config.properties
@@ -21,9 +21,10 @@ Domain=uhc.com
 
 
 HeadlessBrowserPath=C:/softwares/phantomjs-2.1.1-windows/phantomjs-2.1.1-windows/bin/phantomjs.exe
-#DeviceName=Google Nexus 5
+
 WebDriver=saucelabs
 BrowserName=Chrome
+#BrowserName=Safari
 #BrowserVersion=
 #ChromeDriver=C:\ProgramData\Chrome_driver_79.0.3945.16\chromedriver.exe
 
@@ -39,13 +40,14 @@ BrowserName=Chrome
 #SaucelabsDeviceOSName=Android
 #SaucelabsDeviceOSVersion=8
 
-#Virtual Device Setup  //
+#VIRTUAL DEVICE SETUP //
 MOBILE_DEVICE_TYPE=Virtual
 SaucelabsDeviceName= Samsung Galaxy S9 HD GoogleAPI Emulator
 SaucelabsDeviceOSVersion=9.0
 SaucelabsDeviceOSName=Android
 APPIUM_VERSION=1.9.1
 
+#TABLET NAMES
 #Samsung Galaxy Tab S3 GoogleAPI Emulator -7.1
 #Samsung Galaxy Tab A 10 GoogleAPI Emulator
 
