--- a/cukesatdd/src/main/resources/config/ci/config.properties
+++ b/cukesatdd/src/main/resources/config/ci/config.properties
@@ -12,11 +12,11 @@ ldapBindPassword=password6
 ldapUrl=ldap://ldps8003:55395/
 ldapSuperUser=ocp_superuser
 ldapSuperUserPassword=password1
-Environment=digital-uatv2
+Environment=stage
 #isTestHarness=null
 isTestHarness=YES
-#Domain=uhc.com
-Domain=ocp-elr-core-nonprod.optum.com
+Domain=uhc.com
+#Domain=ocp-elr-core-nonprod.optum.com
 #Domain=ocp-ctc-dmz-nonprod.optum.com
 #isHSIDCompatible=null
 isHSIDCompatible=YES
