--- a/cukesatdd/src/main/resources/config/ci/config.properties
+++ b/cukesatdd/src/main/resources/config/ci/config.properties
@@ -44,11 +44,13 @@ BrowserName=Chrome
 #SaucelabsDeviceName=SAMSUNG GALAXY S9
 #SaucelabsDeviceOSName=Android
 #SaucelabsDeviceOSVersion=8
+#SaucelabsTestObjectAPIKey=B4242E614F4F47A094EC92A0606BBAC8
 
 #SaucelabsTestObjectAPIKey=MVPB4242E614F4F47A094EC92A0606BBAC8
 #SaucelabsDeviceName=SAMSUNG GALAXY S8
 #SaucelabsDeviceOSName=Android
 #SaucelabsDeviceOSVersion=8
+
 
 #VIRTUAL DEVICE SETUP //
 MOBILE_DEVICE_TYPE=Virtual
