--- a/cukesatdd/src/main/resources/config/ci/config.properties
+++ b/cukesatdd/src/main/resources/config/ci/config.properties
@@ -33,8 +33,8 @@ Domain=uhc.com
 HeadlessBrowserPath=C:/softwares/phantomjs-2.1.1-windows/phantomjs-2.1.1-windows/bin/phantomjs.exe
 
 WebDriver=saucelabs
-BrowserName=Chrome
-#BrowserName=Safari
+#BrowserName=Chrome
+BrowserName=Safari
 #BrowserVersion=
 #ChromeDriver=C:\ProgramData\Chrome_driver_79.0.3945.16\chromedriver.exe
 
@@ -53,11 +53,11 @@ BrowserName=Chrome
 
 
 #VIRTUAL DEVICE SETUP //
-MOBILE_DEVICE_TYPE=Virtual
-SaucelabsDeviceName= Samsung Galaxy S9 HD GoogleAPI Emulator
-SaucelabsDeviceOSVersion=9.0
-SaucelabsDeviceOSName=Android
-APPIUM_VERSION=1.9.1
+#MOBILE_DEVICE_TYPE=Virtual
+#SaucelabsDeviceName= Samsung Galaxy S9 HD GoogleAPI Emulator
+#SaucelabsDeviceOSVersion=9.0
+#SaucelabsDeviceOSName=Android
+#APPIUM_VERSION=1.9.1
 
 #TABLET NAMES
 #Samsung Galaxy Tab S3 GoogleAPI Emulator -7.1
@@ -77,9 +77,9 @@ sauceLabsMobileTunnelIdentifier=Optum-Stage
 #SaucelabsDeviceOSVersion=12
 #APPIUM_VERSION=1.9.1
 
-#MOBILE_DEVICE_TYPE=Virtual
-#SaucelabsDeviceName=iPhone 11 Simulator
-#SaucelabsDeviceOSName=IOS
-#SaucelabsDeviceOSVersion=13.4
-#APPIUM_VERSION=1.17.1
+MOBILE_DEVICE_TYPE=Virtual
+SaucelabsDeviceName=iPhone 11 Simulator
+SaucelabsDeviceOSName=IOS
+SaucelabsDeviceOSVersion=14.3
+APPIUM_VERSION=1.20.1
 
