DCE Zipcode textbox issue for IOS fixed

--- a/cukesatdd/src/main/resources/config/ci/config.properties
+++ b/cukesatdd/src/main/resources/config/ci/config.properties
@@ -14,19 +14,15 @@ ldapSuperUser=ocp_superuser
 ldapSuperUserPassword=password1
 
 
-#isTestHarness=YES
-
-Environment=stage
-#isTestHarness=null
 isTestHarness=YES
 Domain=uhc.com
 #Domain=ocp-elr-core-nonprod.optum.com
 #Domain=ocp-ctc-dmz-nonprod.optum.com
 
-#isHSIDCompatible=null
+
 isHSIDCompatible=null
 
-Environment=stage
+Environment=offline
 Domain=uhc.com
 
 
@@ -46,7 +42,7 @@ BrowserName=Safari
 #SaucelabsDeviceOSVersion=8
 #SaucelabsTestObjectAPIKey=B4242E614F4F47A094EC92A0606BBAC8
 
-#SaucelabsTestObjectAPIKey=MVPB4242E614F4F47A094EC92A0606BBAC8
+#SaucelabsTestObjectAPIKey=B4242E614F4F47A094EC92A0606BBAC8
 #SaucelabsDeviceName=SAMSUNG GALAXY S8
 #SaucelabsDeviceOSName=Android
 #SaucelabsDeviceOSVersion=8
@@ -70,16 +66,16 @@ BrowserName=Safari
 sauceLabsMobileTunnelIdentifier=Optum-Stage
 
 
-#SauceLabsMobileTunnelIdentifier=OptumRDC_Manual_Stage
-#MOBILE_DEVICE_TYPE=Real
-#SaucelabsDeviceName=iPhone 8
-#SaucelabsDeviceOSName=IOS
-#SaucelabsDeviceOSVersion=12
-#APPIUM_VERSION=1.9.1
-
 MOBILE_DEVICE_TYPE=Virtual
-SaucelabsDeviceName=iPhone 11 Simulator
+SaucelabsDeviceName= iPhone 11 Simulator 
 SaucelabsDeviceOSName=IOS
 SaucelabsDeviceOSVersion=14.3
 APPIUM_VERSION=1.20.1
+
+#
+#MOBILE_DEVICE_TYPE=Virtual
+#SaucelabsDeviceName= iPhone 6s Simulator 
+#SaucelabsDeviceOSName=IOS
+#SaucelabsDeviceOSVersion=12.4
+#APPIUM_VERSION=1.13.0
 
