--- a/cukesatdd/src/main/resources/config/ci/config.properties
+++ b/cukesatdd/src/main/resources/config/ci/config.properties
@@ -30,8 +30,8 @@ Domain=uhc.com
 HeadlessBrowserPath=C:/softwares/phantomjs-2.1.1-windows/phantomjs-2.1.1-windows/bin/phantomjs.exe
 
 WebDriver=saucelabs
-#BrowserName=Chrome
-BrowserName=Safari
+BrowserName=Chrome
+#BrowserName=Safari
 #BrowserVersion=
 #ChromeDriver=C:\ProgramData\Chrome_driver_79.0.3945.16\chromedriver.exe
 
@@ -50,11 +50,11 @@ BrowserName=Safari
 
 
 #VIRTUAL DEVICE SETUP //
-#MOBILE_DEVICE_TYPE=Virtual
-#SaucelabsDeviceName= Samsung Galaxy S9 HD GoogleAPI Emulator
-#SaucelabsDeviceOSVersion=9.0
-#SaucelabsDeviceOSName=Android
-#APPIUM_VERSION=1.9.1
+MOBILE_DEVICE_TYPE=Virtual
+SaucelabsDeviceName= Samsung Galaxy S9 HD GoogleAPI Emulator
+SaucelabsDeviceOSVersion=9.0
+SaucelabsDeviceOSName=Android
+APPIUM_VERSION=1.9.1
 
 #TABLET NAMES
 #Samsung Galaxy Tab S3 GoogleAPI Emulator -7.1
@@ -67,11 +67,11 @@ BrowserName=Safari
 sauceLabsMobileTunnelIdentifier=Optum-Stage
 
 
-MOBILE_DEVICE_TYPE=Virtual
-SaucelabsDeviceName= iPhone 11 Simulator 
-SaucelabsDeviceOSName=IOS
-SaucelabsDeviceOSVersion=14.3
-APPIUM_VERSION=1.20.1
+#MOBILE_DEVICE_TYPE=Virtual
+#SaucelabsDeviceName= iPhone 11 Simulator 
+#SaucelabsDeviceOSName=IOS
+#SaucelabsDeviceOSVersion=14.3
+#APPIUM_VERSION=1.20.1
 
 #
 #MOBILE_DEVICE_TYPE=Virtual
