--- a/cukesatdd/src/main/resources/config/ci/config.properties
+++ b/cukesatdd/src/main/resources/config/ci/config.properties
@@ -43,13 +43,9 @@ BrowserName=Chrome
 #SaucelabsDeviceOSVersion=8
 #SaucelabsTestObjectAPIKey=B4242E614F4F47A094EC92A0606BBAC8
 
-#SaucelabsTestObjectAPIKey=B4242E614F4F47A094EC92A0606BBAC8
-#SaucelabsDeviceName=SAMSUNG GALAXY S8
-#SaucelabsDeviceOSName=Android
-#SaucelabsDeviceOSVersion=8
 
 
-#VIRTUAL DEVICE SETUP //
+VIRTUAL DEVICE SETUP
 MOBILE_DEVICE_TYPE=Virtual
 SaucelabsDeviceName= Samsung Galaxy S9 HD GoogleAPI Emulator
 SaucelabsDeviceOSVersion=9.0
