Dev Merge conflict resolved and Email print fix

--- a/cukesatdd/src/main/resources/config/ci/config.properties
+++ b/cukesatdd/src/main/resources/config/ci/config.properties
@@ -23,6 +23,7 @@ isHSIDCompatible=YES
 HeadlessBrowserPath=C:/softwares/phantomjs-2.1.1-windows/phantomjs-2.1.1-windows/bin/phantomjs.exe
 DeviceName=Google Nexus 5
 WebDriver=saucelabs
+#WebDriver=Chrome
 BrowserName=Chrome
 #ChromeDriver=C:\ProgramData\Chrome_driver_79.0.3945.16\chromedriver.exe
 
@@ -37,11 +38,11 @@ BrowserName=Chrome
 
 
 #VIRTUAL DEVICE SETUP
-#MOBILE_DEVICE_TYPE=Virtual
-#SaucelabsDeviceName= Samsung Galaxy S9 HD GoogleAPI Emulator
-#SaucelabsDeviceOSVersion=9.0
-#SaucelabsDeviceOSName=Android
-#APPIUM_VERSION=1.9.1
+MOBILE_DEVICE_TYPE=Virtual
+SaucelabsDeviceName= Samsung Galaxy S9 HD GoogleAPI Emulator
+SaucelabsDeviceOSVersion=9.0
+SaucelabsDeviceOSName=Android
+APPIUM_VERSION=1.9.1
 
 #TABLET NAMES
 #Samsung Galaxy Tab S3 GoogleAPI Emulator -7.1
