--- a/cukesatdd/src/main/resources/config/ci/config.properties
+++ b/cukesatdd/src/main/resources/config/ci/config.properties
@@ -24,7 +24,8 @@ HeadlessBrowserPath=C:/softwares/phantomjs-2.1.1-windows/phantomjs-2.1.1-windows
 DeviceName=Google Nexus 5
 WebDriver=saucelabs
 #WebDriver=Chrome
-BrowserName=Chrome
+
+
 #ChromeDriver=C:\ProgramData\Chrome_driver_79.0.3945.16\chromedriver.exe
 
 
@@ -38,6 +39,7 @@ BrowserName=Chrome
 
 
 #VIRTUAL DEVICE SETUP
+BrowserName=Chrome
 MOBILE_DEVICE_TYPE=Virtual
 SaucelabsDeviceName= Samsung Galaxy S9 HD GoogleAPI Emulator
 SaucelabsDeviceOSVersion=9.0
@@ -54,7 +56,7 @@ APPIUM_VERSION=1.9.1
 #SaucelabsDeviceOSVersion=13
 sauceLabsMobileTunnelIdentifier=Optum-Stage
 
-
+#BrowserName=Safari
 #MOBILE_DEVICE_TYPE=Virtual
 #SaucelabsDeviceName= iPhone 11 Simulator 
 #SaucelabsDeviceOSName=IOS
