--- a/cukesatdd/src/main/resources/config/ci/config.properties
+++ b/cukesatdd/src/main/resources/config/ci/config.properties
@@ -39,12 +39,12 @@ WebDriver=saucelabs
 
 
 #VIRTUAL DEVICE SETUP
-BrowserName=Chrome
-MOBILE_DEVICE_TYPE=Virtual
-SaucelabsDeviceName= Samsung Galaxy S9 HD GoogleAPI Emulator
-SaucelabsDeviceOSVersion=9.0
-SaucelabsDeviceOSName=Android
-APPIUM_VERSION=1.9.1
+#BrowserName=Chrome
+#MOBILE_DEVICE_TYPE=Virtual
+#SaucelabsDeviceName= Samsung Galaxy S9 HD GoogleAPI Emulator
+#SaucelabsDeviceOSVersion=9.0
+#SaucelabsDeviceOSName=Android
+#APPIUM_VERSION=1.9.1
 
 #TABLET NAMES
 #Samsung Galaxy Tab S3 GoogleAPI Emulator -7.1
@@ -56,12 +56,12 @@ APPIUM_VERSION=1.9.1
 #SaucelabsDeviceOSVersion=13
 sauceLabsMobileTunnelIdentifier=Optum-Stage
 
-#BrowserName=Safari
-#MOBILE_DEVICE_TYPE=Virtual
-#SaucelabsDeviceName= iPhone 11 Simulator 
-#SaucelabsDeviceOSName=IOS
-#SaucelabsDeviceOSVersion=14.3
-#APPIUM_VERSION=1.20.1
+BrowserName=Safari
+MOBILE_DEVICE_TYPE=Virtual
+SaucelabsDeviceName= iPhone 11 Simulator 
+SaucelabsDeviceOSName=IOS
+SaucelabsDeviceOSVersion=14.3
+APPIUM_VERSION=1.20.1
 
 #
 #MOBILE_DEVICE_TYPE=Virtual
