--- a/cukesatdd/src/main/resources/config/ci/config.properties
+++ b/cukesatdd/src/main/resources/config/ci/config.properties
@@ -23,13 +23,13 @@ isHSIDCompatible=YES
 HeadlessBrowserPath=C:/softwares/phantomjs-2.1.1-windows/phantomjs-2.1.1-windows/bin/phantomjs.exe
 DeviceName=Google Nexus 5
 WebDriver=saucelabs
+
 #WebDriver=Chrome
+BrowserName=Chrome
 
 
-#ChromeDriver=C:\ProgramData\Chrome_driver_79.0.3945.16\chromedriver.exe
 
-
-#RealDevice setup
+#***REAL DEVICE SETUP***
 #MOBILE_DEVICE_TYPE=Real
 #SaucelabsDeviceName=SAMSUNG GALAXY S9
 #SaucelabsDeviceOSName=Android
@@ -38,34 +38,28 @@ WebDriver=saucelabs
 
 
 
-#VIRTUAL DEVICE SETUP
+#***VIRTUAL DEVICE SETUP***
 #BrowserName=Chrome
-#MOBILE_DEVICE_TYPE=Virtual
+MOBILE_DEVICE_TYPE=Real
 #SaucelabsDeviceName= Samsung Galaxy S9 HD GoogleAPI Emulator
 #SaucelabsDeviceOSVersion=9.0
 #SaucelabsDeviceOSName=Android
 #APPIUM_VERSION=1.9.1
 
-#TABLET NAMES
+#***TABLET NAMES***
 #Samsung Galaxy Tab S3 GoogleAPI Emulator -7.1
 #Samsung Galaxy Tab A 10 GoogleAPI Emulator
 
-#SaucelabsTestObjectAPIKey=B4242E614F4F47A094EC92A0606BBAC8 , MVPB4242E614F4F47A094EC92A0606BBAC8
+
 #SaucelabsDeviceName=iPhone X
 #SaucelabsDeviceOSName=IOS
 #SaucelabsDeviceOSVersion=13
 sauceLabsMobileTunnelIdentifier=Optum-Stage
 
-BrowserName=Safari
-MOBILE_DEVICE_TYPE=Virtual
-SaucelabsDeviceName= iPhone 11 Simulator 
-SaucelabsDeviceOSName=IOS
-SaucelabsDeviceOSVersion=14.3
-APPIUM_VERSION=1.20.1
-
-#
+#BrowserName=Safari
 #MOBILE_DEVICE_TYPE=Virtual
-#SaucelabsDeviceName= iPhone 6s Simulator 
+#SaucelabsDeviceName= iPhone 11 Simulator 
 #SaucelabsDeviceOSName=IOS
-#SaucelabsDeviceOSVersion=12.4
-#APPIUM_VERSION=1.13.0
+#SaucelabsDeviceOSVersion=13.0
+#APPIUM_VERSION=1.19.2
+
