--- a/cukesatdd/src/main/resources/config/ci/config.properties
+++ b/cukesatdd/src/main/resources/config/ci/config.properties
@@ -63,4 +63,12 @@ sauceLabsMobileTunnelIdentifier=Optum-Stage
 #SaucelabsDeviceOSVersion=13.0
 #APPIUM_VERSION=1.19.2
 
+#Mobile ATDD Inputs
+#SaucelabsTestObjectAPIKey=MVPB4242E614F4F47A094EC92A0606BBAC8
+SaucelabsDeviceName=Samsung Galaxy S10
+SaucelabsDeviceOSName=Android
+SaucelabsDeviceOSVersion=9
+#SaucelabsDeviceName=iPhone X
+#SaucelabsDeviceOSName=IOS
+#SaucelabsDeviceOSVersion=13
 
