mobile real update

--- a/cukesatdd/src/main/resources/config/ci/config.properties
+++ b/cukesatdd/src/main/resources/config/ci/config.properties
@@ -30,17 +30,18 @@ BrowserName=Chrome
 
 
 #***REAL DEVICE SETUP***
-#MOBILE_DEVICE_TYPE=Real
-#SaucelabsDeviceName=SAMSUNG GALAXY S9
-#SaucelabsDeviceOSName=Android
-#SaucelabsDeviceOSVersion=8
-#SaucelabsTestObjectAPIKey=B4242E614F4F47A094EC92A0606BBAC8
-
+MOBILE_DEVICE_TYPE=Real
+SaucelabsDeviceName=Samsung Galaxy S10
+SaucelabsDeviceOSName=Android
+SaucelabsDeviceOSVersion=9
+#SaucelabsDeviceName=iPhone X
+#SaucelabsDeviceOSName=IOS
+#SaucelabsDeviceOSVersion=13
 
 
 #***VIRTUAL DEVICE SETUP***
 #BrowserName=Chrome
-MOBILE_DEVICE_TYPE=Virtual
+#MOBILE_DEVICE_TYPE=Virtual
 #SaucelabsDeviceName= Samsung Galaxy S9 HD GoogleAPI Emulator
 #SaucelabsDeviceOSVersion=9.0
 #SaucelabsDeviceOSName=Android
@@ -62,13 +63,3 @@ sauceLabsMobileTunnelIdentifier=Optum-Stage
 #SaucelabsDeviceOSName=IOS
 #SaucelabsDeviceOSVersion=13.0
 #APPIUM_VERSION=1.19.2
-
-#Mobile ATDD Inputs
-#SaucelabsTestObjectAPIKey=MVPB4242E614F4F47A094EC92A0606BBAC8
-SaucelabsDeviceName=Samsung Galaxy S10
-SaucelabsDeviceOSName=Android
-SaucelabsDeviceOSVersion=9
-#SaucelabsDeviceName=iPhone X
-#SaucelabsDeviceOSName=IOS
-#SaucelabsDeviceOSVersion=13
-
