PRE changes - Package creation

--- a/cukesatdd/src/main/resources/config/ci/config.properties
+++ b/cukesatdd/src/main/resources/config/ci/config.properties
@@ -25,15 +25,15 @@ DeviceName=Google Nexus 5
 WebDriver=saucelabs
 
 #WebDriver=Chrome
-BrowserName=Chrome
+#BrowserName=Chrome
 
 
 
 #***REAL DEVICE SETUP***
-MOBILE_DEVICE_TYPE=Real
-SaucelabsDeviceName=Samsung Galaxy S10
-SaucelabsDeviceOSName=Android
-SaucelabsDeviceOSVersion=9
+#MOBILE_DEVICE_TYPE=Real
+#SaucelabsDeviceName=Samsung Galaxy S10
+#SaucelabsDeviceOSName=Android
+#SaucelabsDeviceOSVersion=9
 #SaucelabsDeviceName=iPhone X
 #SaucelabsDeviceOSName=IOS
 #SaucelabsDeviceOSVersion=13
@@ -57,10 +57,10 @@ SaucelabsDeviceOSVersion=9
 #SaucelabsDeviceOSVersion=13
 sauceLabsMobileTunnelIdentifier=Optum-Stage
 
-#BrowserName=Safari
-#MOBILE_DEVICE_TYPE=Virtual
-#SaucelabsDeviceName= iPhone 11 Simulator 
-#SaucelabsDeviceOSName=IOS
-#SaucelabsDeviceOSVersion=13.0
-#APPIUM_VERSION=1.19.2
+BrowserName=Safari
+MOBILE_DEVICE_TYPE=Virtual
+SaucelabsDeviceName= iPhone 11 Simulator 
+SaucelabsDeviceOSName=IOS
+SaucelabsDeviceOSVersion=13.0
+APPIUM_VERSION=1.15.0
 
