--- a/cukesatdd/pom.xml
+++ b/cukesatdd/pom.xml
@@ -82,8 +82,8 @@
 						<configuration>
 							<!-- <useSystemClassLoader>false</useSystemClassLoader> -->
 							<!-- <forkCount>2.5C</forkCount> --> <!-- Total of 2.5 * number of CPU core's concurrent JVM process will be created -->
-							<forkCount>3</forkCount>
-							<reuseForks>false</reuseForks>
+							<!-- <forkCount>3</forkCount>
+							<reuseForks>false</reuseForks> -->
 							<suiteXmlFiles>
 								<suiteXmlFile>${suiteXmlFile}</suiteXmlFile>
 							</suiteXmlFiles>
