--- a/cukesatdd/pom.xml
+++ b/cukesatdd/pom.xml
@@ -102,6 +102,7 @@
 							<argLine>-Xmx3g -XX:MaxPermSize=1024m -XX:+UseParallelGC</argLine>
 							<systemPropertyVariables>
 								<microapps>${microapp}</microapps>
+								<filedata>${filedata}</filedata>
 								<environment>${environment}</environment>
 								<webdriverhost>${webdriverhost}</webdriverhost>
 							</systemPropertyVariables>
